--- a/vignettes/pkgfilecache.Rmd
+++ b/vignettes/pkgfilecache.Rmd
@@ -15,7 +15,7 @@ This is intended for GNU R package developers who need to download optional extr
 
 ## Background
 
-When package authors want to ship data for their package, they will quickly hit the package size limit on CRAN (which is 5 MB as of September 2019). The solution is to host the data elsewhere and download it on demand. This is what pkgfilecache allows you to do. You can put your files onto a web server of your choice, take the MD5 sums, and have pkgfilecache download them locally unless they already exist and have the correct MD5 hash. You can then access them in a convenient way, similar to files shipped in `inst/extdata`.
+When package authors want to ship data for their package, they will quickly hit the package size limit on CRAN (which is 5 MB as of September 2019). The solution is to host the data elsewhere and download it on demand, but store it once it has been downloaded. This is what pkgfilecache allows you to do. You can put your files onto a web server of your choice, take the MD5 sums, and have pkgfilecache download them locally unless they already exist and have the correct MD5 hash. You can then access them in a convenient way, similar to files shipped in `inst/extdata`.
 
 One could download the files every time to a temporary directory, but that clearly does not make sense in many cases. This package permanently stores the files under a subdir of the directory returned by `rappdirs::user_data_dir`. For my Ubuntu Linux system, that is `/home/myuser/.local/share`, but that should not bother you and you should not care about it.
 
