--- a/vignettes/pkgfilecache.Rmd
+++ b/vignettes/pkgfilecache.Rmd
@@ -45,7 +45,7 @@ Let's first make files hosted on our server available on the client, in the pack
     library("pkgfilecache")
 
     pkg_info = get_pkg_info("yourpackage");   # Something to identify the package that uses the package file cache.
-    
+
     local_filenames = c("file1.txt", "file2.txt");    # How the files should be called in the local package file cache
     urls = c("https://your.server/yourpackage/large_file1.txt", "https://your.server/yourpackage/large_file2.txt"); # Remote URLs where to download files from
     md5sums = c("35261471bcd198583c3805ee2a543b1f", "85ffec2e6efb476f1ee1e3e7fddd86de");    # MD5 checksums. Optional but recommended.
@@ -57,7 +57,7 @@ Now it is time to make them available:
     res = ensure_files_available(pkg_info, local_filenames, urls, md5sums=md5sums);
 ```
 
-The return value `res` is a named list with several entries. The field `res$file_status` is a logical vector indicating for each file whether it now exists locally. Note that the function will first check to see whether the files are already in the package cache. If you supplied md5sums, they will also be checked. Only files which did not pass the check will be downloaded, so it is save to call this function every time you want to make sure that the files exist. (E.g., in example code you give). 
+The return value `res` is a named list with several entries. The field `res$file_status` is a logical vector indicating for each file whether it now exists locally. Note that the function will first check to see whether the files are already in the package cache. If you supplied md5sums, they will also be checked. Only files which did not pass the check will be downloaded, so it is save to call this function every time you want to make sure that the files exist. (E.g., in example code you give).
 
 You can also get a list of the filename which are now available (no matter whether they have been downloaded or where already available) from `res$available`. And you can get a list of file which should have been downloaded, but for which retrieval failed, from `res$missing`.
 
@@ -101,7 +101,7 @@ The return values are logical vectors indicating for each file whether it exists
 
 # Giving users the option to download extra package data
 
-This part is for package authors and gives a suggestion for an interface that allows users to download optional data for your package. Make sure you have read the section 'Using the functions in your script' before reading on. 
+This part is for package authors and gives a suggestion for an interface that allows users to download optional data for your package. Make sure you have read the section 'Using the functions in your script' before reading on.
 
 ## Interface suggestion
 
@@ -125,18 +125,18 @@ Here are the functions:
 #' @title Download optional data for this package if required.
 #'
 #' @description Ensure that the optioanl data is available locally in the package cache. Will try to download the data only if it is not available.
-#' 
+#'
 #' @return Named list. The list has entries: "available": vector of strings. The names of the files that are available in the local file cache. You can access them using get_optional_data_file(). "missing": vector of strings. The names of the files that this function was unable to retrieve.
 #'
 #' @export
 download_optional_data <- function() {
   pkg_info = pkgfilecache::get_pkg_info("yourpackage");        # to identify the package using the cache
-  
+
   # Replace these with your optional data files.
   local_filenames = c("file1.txt", "file2.txt");    # How the files should be called in the local package file cache
   urls = c("https://your.server/yourpackage/large_file1.txt", "https://your.server/yourpackage/large_file2.txt"); # Remote URLs where to download files from
   md5sums = c("35261471bcd198583c3805ee2a543b1f", "85ffec2e6efb476f1ee1e3e7fddd86de");    # MD5 checksums. Optional but recommended.
-  
+
   cfiles = pkgfilecache::ensure_files_available(pkg_info, local_filenames, urls, md5sums=md5sums);
   cfiles$file_status = NULL;
   return(cfiles);
@@ -145,7 +145,7 @@ download_optional_data <- function() {
 #' @title Get file names available in package cache.
 #'
 #' @description Get file names of optional data files which are available in the local package cache. You can access these files with get_optional_data_file().
-#' 
+#'
 #' @return vector of strings. The file names available, relative to the package cache.
 #'
 #' @export
@@ -177,7 +177,7 @@ get_optional_data_filepath <- function(filename, mustWork=TRUE) {
 #' @export
 delete_all_optional_data <- function() {
   pkg_info = pkgfilecache::get_pkg_info("yourpackage");
-  return(pkgfilecache::erase_cache(pkg_info));
+  return(pkgfilecache::erase_file_cache(pkg_info));
 }
 ```
 
@@ -190,5 +190,3 @@ delete_all_optional_data <- function() {
 * Currently, writing files to a local directory structure (sub directories) under the package cache dir is not supported. All files go directly into that dir.
 * Nothing is special about the local package cache dir, and of course there is no way to enforce that other packages or applications do not mess with it and the data in it. You should never store secrets of any kind in that directory!
 * It is your responsibility not to write absurd amounts of data into that directory and tell the user in advance how much data you are roughly about to download.
-
-
